# fast-demo-project

./: .env.sample  .gitignore  README.md  project-build.md  pyproject.toml
alembic/: env.py
alembic/versions/: 309a4ffb61af_add_powers_column_to_heroes_table.py  736113213a43_initial_migration.py
app/: main.py
app/api/v1/: heroes_route.py
app/core/: config.py  database.py  exceptions.py
app/db/: session.py
app/domains/heroes/: heroes_repository.py  heroes_services.py
app/models/: __init__.py  base.py  heroes.py  mixin.py  user.py
app/repository/: heroes.py
app/schemas/: heroes.py  heroes_filter.py
docs/: pydantic-settings-guide.md
scripts/: fill_fake_heroes.py
